@@ -35,7 +35,7 @@ class TodoyuRoleManager {
 	/**
 	 * Get a usergroup object
 	 *
-	 * @param	Integer		$idUsergroup
+	 * @param	Integer		$idRole
 	 * @return	TodoyuRole
 	 */
 	public static function getRole($idRole) {
@@ -49,7 +49,7 @@ class TodoyuRoleManager {
 	/**
 	 * Get informations about the roles defined in $groupIDs
 	 *
-	 * @param	Array		$groupIDs		IDs of the groups to the get information from
+	 * @param	Array		$roleIDs		IDs of the groups to the get information from
 	 * @return	Array
 	 */
 	public static function getRoles(array $roleIDs) {
@@ -104,9 +104,9 @@ class TodoyuRoleManager {
 
 
 	/**
-	 * Update a usergrop
+	 * Update a usergroup
 	 *
-	 * @param	Integer		$idUsergroup
+	 * @param	Integer		$idRole
 	 * @param	Array		$data
 	 * @return	Boolean
 	 */
@@ -121,7 +121,7 @@ class TodoyuRoleManager {
 	/**
 	 * Assign multiple persons to an event
 	 *
-	 * @param	Integer		$idEvent
+	 * @param	Integer		$idRole
 	 * @param	Array		$personIDs
 	 */
 	public static function assignPersonsToRole($idRole, array $personIDs) {
@@ -159,7 +159,7 @@ class TodoyuRoleManager {
 	/**
 	 * Remove role from cache
 	 *
-	 * @param	Integer	$idRole
+	 * @param	Integer		$idRole
 	 */
 	public static function removeRoleFromCache($idRole) {
 		$idRole = intval($idRole);
@@ -174,7 +174,7 @@ class TodoyuRoleManager {
 	/**
 	 * Save role (add or update)
 	 *
-	 * @param	Array	$storageData
+	 * @param	Array	$data
 	 */
 	public static function saveRole(array $data) {
 		$xmlPath= 'core/config/form/role.xml';
@@ -231,8 +231,8 @@ class TodoyuRoleManager {
 	/**
 	 * Remove an user from a role
 	 *
-	 * @param	Integer		$idGroup
-	 * @param	Integer		$idUser
+	 * @param	Integer		$idRole
+	 * @param	Integer		$idPerson
 	 */
 	public static function removePerson($idRole, $idPerson) {
 		$idRole		= intval($idRole);
@@ -246,10 +246,10 @@ class TodoyuRoleManager {
 	/**
 	 * Remove all users from a role
 	 *
-	 * @param	Integer		$idGroup
+	 * @param	Integer		$idRole
 	 */
 	public static function removePersons($idRole) {
-		$idRole= intval($idRole);
+		$idRole	= intval($idRole);
 
 		TodoyuDbHelper::removeMMrelations('ext_contact_mm_person_role', 'id_role', $idRole);
 	}
@@ -270,7 +270,7 @@ class TodoyuRoleManager {
 
 
 	/**
-	 * Add a user to an usergroup
+	 * Add a user to a usergroup
 	 *
 	 * @param	Integer		$idRole
 	 * @param	Integer		$idPerson
@@ -287,7 +287,7 @@ class TodoyuRoleManager {
 
 
 	/**
-	 * Add users to an usergroup
+	 * Add users to a usergroup
 	 *
 	 * @param	Integer		$idRole
 	 * @param	Array		$personIDs
@@ -323,6 +323,7 @@ class TodoyuRoleManager {
 	 * Delete role (set deleted flag to 1)
 	 *
 	 * @param	Integer		$idRole
+	 * @return	Boolean
 	 */
 	public static function deleteRole($idRole) {
 		return TodoyuRecordManager::deleteRecord(self::TABLE, $idRole);
@@ -351,7 +352,7 @@ class TodoyuRoleManager {
 	/**
 	 * Get number of users in the group
 	 *
-	 * @param	Integer		$idUsergroup
+	 * @param	Integer		$idRole
 	 * @return	Integer
 	 */
 	public static function getNumPersons($idRole) {
@@ -375,8 +376,9 @@ class TodoyuRoleManager {
 		$fields	= '	p.*';
 		$table	= '	ext_contact_person p,
 					ext_contact_mm_person_role mm';
-		$where	= '		mm.id_role = ' . $idRole .
-				  ' AND	mm.id_person = p.id';
+		$where	= '		mm.id_role		= ' . $idRole .
+				  ' AND	mm.id_person	= p.id' .
+				  ' AND p.deleted		= 0';
 
 		return Todoyu::db()->getArray($fields, $table, $where);
 	}
